[bumpversion]
commit = True
current_version = 2.9.2
sign_tags = True
tag = True
tag_name = {new_version}

[metadata]
name = smeterd
version = attr: smeterd.__version__
url = https://github.com/nrocco/smeterd
description = Read smart meter P1 packets
long_description = file: README.md
long_description_content_type = text/markdown
author = Nico Di Rocco
author_email = dirocco.nico@gmail.com
platform = any
keywords = smartmeter, kwh, gas, p1
license = GPLv3
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Console
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: Unix
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities

[options]
python_requires = >=3.7
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires = 
	setuptools
	wheel
install_requires = 
	click
	crcmod
	pyserial

[options.extras_require]
develop = 
	pytest
	pytest-cov

[options.entry_points]
console_scripts = 
	smeterd = smeterd.cli:cli

[options.packages.find]
exclude = tests

[bumpversion:file:smeterd/__init__.py]

[wheel]
universal = true

[flake8]
ignore = E501
exclude = .git,.eggs,__pycache__,build,dist,env
max-complexity = 12
max-line-length = 1000
